// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<Fragment>
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#54B399",
      }
    }
    disabled={false}
    disabledBy="iconSize"
    fields={
      Array [
        Object {
          "isUnsupported": false,
          "label": "field0",
          "name": "field0",
          "origin": "source",
          "supportsAutoDomain": true,
          "type": "string",
        },
      ]
    }
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#54B399",
        },
        "_styleName": "fillColor",
      }
    }
    swatches={
      Array [
        "#54B399",
        "#6092C0",
        "#D36086",
        "#9170B8",
        "#CA8EAE",
        "#D6BF57",
        "#B9A888",
        "#DA8B45",
        "#AA6556",
        "#E7664C",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#41937c",
      }
    }
    disabled={false}
    disabledBy="lineWidth"
    fields={
      Array [
        Object {
          "isUnsupported": false,
          "label": "field0",
          "name": "field0",
          "origin": "source",
          "supportsAutoDomain": true,
          "type": "string",
        },
      ]
    }
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#41937c",
        },
        "_styleName": "lineColor",
      }
    }
    swatches={
      Array [
        "#41937c",
        "#4379aa",
        "#c83868",
        "#7751a4",
        "#ba6b95",
        "#c9ad31",
        "#a69168",
        "#c57127",
        "#885145",
        "#e1401f",
        "#000",
        "#FFF",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleSizeEditor
    defaultDynamicStyleOptions={
      Object {
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
        "maxSize": 10,
        "minSize": 1,
      }
    }
    defaultStaticStyleOptions={
      Object {
        "size": 1,
      }
    }
    disabled={false}
    disabledBy="iconSize"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticSizeProperty {
        "_options": Object {
          "size": 1,
        },
        "_styleName": "lineWidth",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleLabelEditor
    defaultDynamicStyleOptions={
      Object {
        "field": undefined,
      }
    }
    defaultStaticStyleOptions={
      Object {
        "value": "",
      }
    }
    fields={
      Array [
        Object {
          "isUnsupported": false,
          "label": "field0",
          "name": "field0",
          "origin": "source",
          "supportsAutoDomain": true,
          "type": "string",
        },
      ]
    }
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticTextProperty {
        "_options": Object {
          "value": "",
        },
        "_styleName": "labelText",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#000000",
      }
    }
    disabled={true}
    disabledBy="labelText"
    fields={
      Array [
        Object {
          "isUnsupported": false,
          "label": "field0",
          "name": "field0",
          "origin": "source",
          "supportsAutoDomain": true,
          "type": "string",
        },
      ]
    }
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#000000",
        },
        "_styleName": "labelColor",
      }
    }
    swatches={
      Array [
        "#41937c",
        "#4379aa",
        "#c83868",
        "#7751a4",
        "#ba6b95",
        "#c9ad31",
        "#a69168",
        "#c57127",
        "#885145",
        "#e1401f",
        "#000",
        "#FFF",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleSizeEditor
    defaultDynamicStyleOptions={
      Object {
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
        "maxSize": 32,
        "minSize": 7,
      }
    }
    defaultStaticStyleOptions={
      Object {
        "size": 14,
      }
    }
    disabled={true}
    disabledBy="labelText"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticSizeProperty {
        "_options": Object {
          "size": 14,
        },
        "_styleName": "labelSize",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#FFFFFF",
      }
    }
    disabled={true}
    disabledBy="labelText"
    fields={
      Array [
        Object {
          "isUnsupported": false,
          "label": "field0",
          "name": "field0",
          "origin": "source",
          "supportsAutoDomain": true,
          "type": "string",
        },
      ]
    }
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#FFFFFF",
        },
        "_styleName": "labelBorderColor",
      }
    }
    swatches={
      Array [
        "#41937c",
        "#4379aa",
        "#c83868",
        "#7751a4",
        "#ba6b95",
        "#c9ad31",
        "#a69168",
        "#c57127",
        "#885145",
        "#e1401f",
        "#000",
        "#FFF",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleLabelBorderSizeEditor
    disabled={true}
    disabledBy="labelText"
    handlePropertyChange={[Function]}
    styleProperty={
      LabelBorderSizeProperty {
        "_labelSizeProperty": StaticSizeProperty {
          "_options": Object {
            "size": 14,
          },
          "_styleName": "labelSize",
        },
        "_options": Object {
          "size": "SMALL",
        },
        "_styleName": "labelBorderSize",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <EuiFormRow
    describedByIds={Array []}
    display="columnCompressedSwitch"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiSwitch
      checked={true}
      compressed={true}
      label="Apply global time to style metadata requests"
      onChange={[Function]}
    />
  </EuiFormRow>
</Fragment>
`;

exports[`should render with no style fields 1`] = `
<Fragment>
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#54B399",
      }
    }
    disabled={false}
    disabledBy="iconSize"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#54B399",
        },
        "_styleName": "fillColor",
      }
    }
    swatches={
      Array [
        "#54B399",
        "#6092C0",
        "#D36086",
        "#9170B8",
        "#CA8EAE",
        "#D6BF57",
        "#B9A888",
        "#DA8B45",
        "#AA6556",
        "#E7664C",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#41937c",
      }
    }
    disabled={false}
    disabledBy="lineWidth"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#41937c",
        },
        "_styleName": "lineColor",
      }
    }
    swatches={
      Array [
        "#41937c",
        "#4379aa",
        "#c83868",
        "#7751a4",
        "#ba6b95",
        "#c9ad31",
        "#a69168",
        "#c57127",
        "#885145",
        "#e1401f",
        "#000",
        "#FFF",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleSizeEditor
    defaultDynamicStyleOptions={
      Object {
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
        "maxSize": 10,
        "minSize": 1,
      }
    }
    defaultStaticStyleOptions={
      Object {
        "size": 1,
      }
    }
    disabled={false}
    disabledBy="iconSize"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticSizeProperty {
        "_options": Object {
          "size": 1,
        },
        "_styleName": "lineWidth",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleLabelEditor
    defaultDynamicStyleOptions={
      Object {
        "field": undefined,
      }
    }
    defaultStaticStyleOptions={
      Object {
        "value": "",
      }
    }
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticTextProperty {
        "_options": Object {
          "value": "",
        },
        "_styleName": "labelText",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#000000",
      }
    }
    disabled={true}
    disabledBy="labelText"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#000000",
        },
        "_styleName": "labelColor",
      }
    }
    swatches={
      Array [
        "#41937c",
        "#4379aa",
        "#c83868",
        "#7751a4",
        "#ba6b95",
        "#c9ad31",
        "#a69168",
        "#c57127",
        "#885145",
        "#e1401f",
        "#000",
        "#FFF",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleSizeEditor
    defaultDynamicStyleOptions={
      Object {
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
        "maxSize": 32,
        "minSize": 7,
      }
    }
    defaultStaticStyleOptions={
      Object {
        "size": 14,
      }
    }
    disabled={true}
    disabledBy="labelText"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticSizeProperty {
        "_options": Object {
          "size": 14,
        },
        "_styleName": "labelSize",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#FFFFFF",
      }
    }
    disabled={true}
    disabledBy="labelText"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#FFFFFF",
        },
        "_styleName": "labelBorderColor",
      }
    }
    swatches={
      Array [
        "#41937c",
        "#4379aa",
        "#c83868",
        "#7751a4",
        "#ba6b95",
        "#c9ad31",
        "#a69168",
        "#c57127",
        "#885145",
        "#e1401f",
        "#000",
        "#FFF",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleLabelBorderSizeEditor
    disabled={true}
    disabledBy="labelText"
    handlePropertyChange={[Function]}
    styleProperty={
      LabelBorderSizeProperty {
        "_labelSizeProperty": StaticSizeProperty {
          "_options": Object {
            "size": 14,
          },
          "_styleName": "labelSize",
        },
        "_options": Object {
          "size": "SMALL",
        },
        "_styleName": "labelBorderSize",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <EuiFormRow
    describedByIds={Array []}
    display="columnCompressedSwitch"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiSwitch
      checked={true}
      compressed={true}
      label="Apply global time to style metadata requests"
      onChange={[Function]}
    />
  </EuiFormRow>
</Fragment>
`;
